IS2 - Kata4; Versión 2

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,9 +38,11 @@ excludes=
 file.reference.jcommon-1.0.23.jar=/home/cristobaljjg/Escritorio/jcommon-1.0.23.jar
 file.reference.jcommon-1.0.23.jar-1=C:\\Users\\crist\\OneDrive\\Escritorio\\Kata3\\jcommon-1.0.23.jar
 file.reference.jcommon-1.0.23.jar-2=C:\\Users\\crist\\OneDrive\\Escritorio\\IS2\\Kata3\\jcommon-1.0.23.jar
+file.reference.jcommon-1.0.23.jar-3=C:\\Users\\Crist\u00f3bal J\\OneDrive\\Escritorio\\IS2\\Kata3\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19-demo.jar=/home/cristobaljjg/Escritorio/cosa/jfreechart-1.0.19/jfreechart-1.0.19-demo.jar
 file.reference.jfreechart-1.0.19.jar=C:\\Users\\crist\\OneDrive\\Escritorio\\Kata3\\jfreechart-1.0.19.jar
 file.reference.jfreechart-1.0.19.jar-1=C:\\Users\\crist\\OneDrive\\Escritorio\\IS2\\Kata3\\jfreechart-1.0.19.jar
+file.reference.jfreechart-1.0.19.jar-2=C:\\Users\\Crist\u00f3bal J\\OneDrive\\Escritorio\\IS2\\Kata3\\jfreechart-1.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -49,7 +51,9 @@ javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar-1}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
     ${file.reference.jcommon-1.0.23.jar-2}:\
-    ${file.reference.jfreechart-1.0.19.jar-1}
+    ${file.reference.jfreechart-1.0.19.jar-1}:\
+    ${file.reference.jcommon-1.0.23.jar-3}:\
+    ${file.reference.jfreechart-1.0.19.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
